fix shadow on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -167,6 +167,11 @@
     0 -2px 5px #0080f707;
 }
 
+.shadow {
+  box-shadow: 0 4px 30px rgba(11, 33, 74, 0.11),
+  0 -2px 5px rgba(11, 33, 74, 0.03);
+}
+
 .arrow-link:hover {
   color: #0162cc;
   border-bottom: 1px solid #0162cc;
